--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <canvas id="canvas"></canvas>
-  <script type="module" src="./scripts/game.ts"></script>
+  <script src="./scripts/game.ts"></script>
 </body>
 </html>
