--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <canvas id="canvas"></canvas>
+  <iframe src="./assets/sounds/Silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+  <audio id="audio" autoplay loop>
+    <source src="./assets/sounds/BGM.ogg">
+  </audio>
   <script src="./scripts/game.ts"></script>
 </body>
 </html>
