add: 파비콘 추가

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/scss/main.scss">
   <title>Space Sweeper</title>
+  <link rel="icon" type="image/png" href="./assets/images/favicon/favicon.png">
 </head>
 <body>
+  <div class="container">
+    <div class="bg"></div>
+  </div>
   <canvas id="canvas"></canvas>
   <iframe src="./assets/sounds/Silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
   <audio id="audio" autoplay loop>
