update: setImage 로직 변경

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
   <audio id="audio" autoplay loop>
     <source src="./assets/sounds/BGM.ogg">
   </audio>
-  <script src="./scripts/game.ts" async></script>
+  <script src="./scripts/game.ts"></script>
 </body>
 </html>
